# learning-house

./: CHANGELOG.md  README.en.md  README.md  mise.toml  package.json  pnpm-lock.yaml  release-please-config.json
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx  globals.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: AlphaTabScore.tsx  AudioPlayerBar.tsx  DocViewer.tsx  ImageScore.tsx  MetronomeBar.tsx  PdfScore.tsx  RateGroup.tsx  RateSelect.tsx  SplitPane.tsx  TapTempoModal.tsx  ToolBar.tsx  VideoPlayer.tsx  VolumeControl.tsx  audiobar.css.ts  docviewer.css.ts  metronome.css.ts  splitpane.css.ts  tap.css.ts  toolbar.css.ts  videoplayer.css.ts
apps/desktop/src/hooks/: useMediaShortcuts.ts  useMetronome.ts
apps/desktop/src/lib/: aiPrompt.ts  bpmDetect.ts  dialogs.ts  feedback.ts  format.ts  heuristic.ts  mediaMeta.ts  platform.ts  progress.ts  scanner.ts  scoreBpm.ts  storage.ts  updater.ts
apps/desktop/src/pages/: ClassroomPage.tsx  LibraryPage.tsx  ManagePage.tsx  classroom.css.ts  library.css.ts
apps/desktop/src/styles/: layout.css.ts
scripts/: diag-bpm.ts  gen-manifest-chengtian.mjs  test-bpm.ts  test-scan.ts
